MMCPA-0: Fixing issue for PDP scroll and removing text overflow ellipsis for click and collect checkout page.

--- a/docroot/themes/custom/alshaya_white_label/sass/components/products/_product-detail.scss
+++ b/docroot/themes/custom/alshaya_white_label/sass/components/products/_product-detail.scss
@@ -978,8 +978,8 @@
     ul {
       padding-#{$left}: 0;
       margin: 0;
-      height: 380px;
-      overflow: scroll;
+      height: 21.56rem;
+      overflow-y: scroll;
       clear: both;
 
       li {
